--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,15 +10,21 @@
 
 <body>
     <div class="col-8 m-auto pt-2 pb-2 text-center">
-        <h1>CRUD com Python</h1>
+        <h1>Controle Estoque</h1>
     </div>
 
     <div class="col-8 m-auto pt-3 pb-2 text-center">
         <a href="/form" class="btn btn-success">Adicionar</a>
     </div>
 
+    <div class="col-8 m-auto pt-3 pb-2 text-center">
+      <form method="get">
+          <input type="text" id="search" name="search" class="form-control" placeholder="Buscar...">
+      </form>
+    </div>
+
     <div class="col-8 m-auto pt-4 pb-2 text-center">
-        <table class="table">
+        <table class="table table-hover">
             <thead class="thead-dark">
               <tr>
                 <th scope="col">#</th>
@@ -38,13 +44,25 @@
                 <td>
                   <a href="/view/{{dbs.id}}/" class="btn btn-dark">Visualizar</a>
                   <a href="/edit/{{dbs.id}}/" class="btn btn-primary">Editar</a>
-                  <a href="/delete/{{dbs.id}}/" class="btn btn-danger">Deletar</a>
+                  <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel">Deletar</a>
                 </td>
               </tr>
               {% endfor %}
             </tbody>  
         </table>    
     </div>
+
+    <div class="pagination">
+      {% if db.has_previous %}
+          <a href="?page={{db.previous_page_number}}"> < </a>
+      {% endif %}
+  
+      {{db.number}}
+  
+      {% if db.has_next %}
+          <a href="?page={{db.next_page_number}}"> > </a>
+      {% endif %}
+    </div>>
 
     {% load static %}
     <script src="{% static 'javascript.js' %}"></script>
